# project_management

./: README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package.json
frontend/src/: router.js
frontend/src/components/: Footer.vue  NavBar.vue
frontend/src/pages/: Home.vue
frontend/src/pages/client/: ClientDashboard.vue  Deliverable.vue  Project.vue  ProjectDetails.vue  TeamMember.vue
project_management/: api.py  hooks.py
project_management/project_management/doctype/client/: client.json
project_management/project_management/doctype/client_feedback/: client_feedback.js  client_feedback.json  client_feedback.py  test_client_feedback.py
project_management/project_management/doctype/deliverable/: deliverable.json  deliverable.py
project_management/project_management/doctype/deliverable_task/: deliverable_task.json  deliverable_task.py
project_management/project_management/doctype/pm_client_guest_access/: pm_client_guest_access.js  pm_client_guest_access.json  pm_client_guest_access.py  test_pm_client_guest_access.py
project_management/project_management/doctype/pm_client_invitation/: pm_client_invitation.js  pm_client_invitation.json  pm_client_invitation.py  test_pm_client_invitation.py
project_management/project_management/doctype/project/: project.js  project.json  project.py  test_project.py
project_management/templates/includes/: member_project_notification.html  pm_client_invitation.html  vendor_project_notification.html
project_management/utils/: notifications.py
(+34 files in other folders)
